--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,50 @@
 			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>
+			<!-- Logging -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${org.slf4j-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>${org.slf4j-version}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>${org.slf4j-version}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.15</version>
+			<exclusions>
+				<exclusion>
+					<groupId>javax.mail</groupId>
+					<artifactId>mail</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>javax.jms</groupId>
+					<artifactId>jms</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.sun.jdmk</groupId>
+					<artifactId>jmxtools</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.sun.jmx</groupId>
+					<artifactId>jmxri</artifactId>
+				</exclusion>
+			</exclusions>
+			<scope>runtime</scope>
+		</dependency>
+
+		
 	</dependencies>
     <build>
     <finalName>aggregator</finalName>
@@ -48,7 +92,7 @@
 	            		<manifest>
 	                		<addClasspath>true</addClasspath>
 	                		<classpathPrefix>lib/</classpathPrefix>
-	                		<mainClass>app.aggregator.launch.Running</mainClass>
+	                		<mainClass>app.aggregator.launch.Launcher</mainClass>
 	            		</manifest>
         			</archive>
     			</configuration>
